# prototype-it2002

./: .gitignore  Dockerfile  STUDENT.sql  TUTOR.sql  docker-compose.yml  makefile  pyproject.toml
prototype_it2002/: app.py  auth.py  create_db.py  main.py  models.py  user_serializer.py
prototype_it2002/templates/: base.html  findform.html  index.html  login.html  matchlist.html  profile.html  signup.html
